cabal-version:      3.0
name:               rme-what4
version:            0.1
synopsis:           What4 adapter for the RME solver
license:            BSD-3-Clause
license-file:       LICENSE
author:             Eric Mertens
maintainer:         emertens@galois.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md
copyright:          2025 Galois
description:
    This package provides an adapter for what4 to support
    solving boolean and bit-vector goals using the RME
    representation.

source-repository head
  type:     git
  location: https://github.com/GaloisInc/rme
  subdir:   rme-what4

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Data.RME.What4
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:
        base                    ^>= {4.17, 4.18, 4.19, 4.20, 4.21},
        what4                   ^>= 1.7,
        vector                  ^>= 0.13,
        rme                     ^>= 0.1,
        parameterized-utils     ^>= {2.0, 2.1},
        containers              ^>= {0.5, 0.6, 0.7, 0.8},
        bv-sized                ^>= 1.0,
