Cabal-version:      3.0
Name:               rme
Version:            0.1.1
Author:             Galois, Inc.
Maintainer:         huffman@galois.com
Build-type:         Simple
License:            BSD-3-Clause
extra-doc-files:    CHANGELOG.md
License-file:       LICENSE
Copyright:          (c) 2016-2025 Galois Inc.
Category:           Formal Methods
Synopsis:           Reed-Muller Expansion normal form for Boolean Formulas
Description:
  A representation of the Algebraic Normal Form of boolean formulas
  using the Reed-Muller Expansion.

source-repository head
  type:     git
  location: https://github.com/GaloisInc/rme
  subdir:   rme

library
  default-language: Haskell2010

  build-depends:
    -- upstream packages from hackage
    base == 4.*,
    containers,
    vector

  hs-source-dirs: src
  exposed-modules:
    Data.RME
    Data.RME.Base
    Data.RME.Vector

  ghc-options: -O2 -Wall -Wcompat -fno-ignore-asserts -fno-spec-constr-count
